<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AmortizationTable">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/col1"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:text="@string/col1"
                    android:textSize="24sp"
                    android:layout_gravity="center_horizontal">
                </TextView>

                <TextView
                    android:id="@+id/col2"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:text="@string/col2"
                    android:textSize="24sp"
                    android:layout_gravity="center_horizontal">
                </TextView>

                <TextView
                    android:id="@+id/col3"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:text="@string/col3"
                    android:textSize="24sp"
                    android:layout_gravity="center_horizontal">
                </TextView>
                <TextView
                android:id="@+id/col4"
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:text="@string/col4"
                android:textSize="24sp"
                    android:layout_gravity="center_horizontal">
                </TextView>

                <TextView
                android:id="@+id/col5"
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:text="@string/col5"
                android:textSize="24sp"
                    android:layout_gravity="center_horizontal">
            </TextView>

            </LinearLayout>
                <ListView
                    android:id="@+id/amrtztable"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:scrollbars="none">
                </ListView>


            </LinearLayout>
    </HorizontalScrollView>





